3392346 Fix refresh issue